[package]
name = "mastoyoink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
clap = { version = "3.0.8", features = ["derive"] }